--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSRS Pet Tracker</title>
+<link rel="icon" href="https://oldschool.runescape.wiki/images/Pet_cat_%28black%29.png?e2d9b">
     <style>
         body {
             background-color: #1a1a1a;
